fix display problem on mobile

--- a/assets/css/intlTelInput.css
+++ b/assets/css/intlTelInput.css
@@ -56,7 +56,7 @@
     background-color: white;
     border: 1px solid #CCC;
     white-space: nowrap;
-    max-height: 200px;
+    max-height: 140px;
     overflow-y: scroll; }
     .intl-tel-input .country-list.dropup {
       bottom: 100%;
